--- a/chat.html
+++ b/chat.html
@@ -159,8 +159,9 @@
     <div id="notification" class="notification"></div>
 
     <!-- 引入GitHub数据管理器 -->
-    <script src="js/github-data-manager-secure.js"></script>
+    <script src="js/github-data-manager.js"></script>
     <!-- 引入聊天室JS -->
     <script src="js/chat.js"></script>  <!-- 确保是 js/chat.js -->
 </body>
+
 </html>
