--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
     <!-- 引入JS -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <!-- 先引入GitHub数据管理器 -->
-    <script src="js/github-data-manager-secure.js"></script>
+    <script src="js/github-data-manager.js"></script>
     <!-- 后引入主脚本 -->
     <script src="js/script.js"></script>  <!-- 修复这行！ -->
 </body>
+
 </html>
