--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                     <span class="btn-text">登录</span>
                     <div class="btn-effects"></div>
                 </button>
+                <!-- 添加加载状态 -->
+                <div class="loading-state" id="loadingState">
+                    <div class="loading-spinner-small"></div>
+                    <span>正在连接...</span>
+                </div>
             </form>
 
             <!-- 切换链接 -->
