--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
                     <span class="btn-text">登录</span>
                     <div class="btn-effects"></div>
                 </button>
-                <!-- 添加加载状态 -->
+
+                <!-- 加载状态 - 简化显示 -->
                 <div class="loading-state" id="loadingState">
                     <div class="loading-spinner-small"></div>
-                    <span>正在连接...</span>
+                    <span>正在处理...</span>
                 </div>
             </form>
 
@@ -76,11 +77,12 @@
                     <i class="fas fa-mobile-alt"></i>
                 </button>
             </div>
-            <!-- 在 index.html 的第三方登录区域后添加 -->
+
+            <!-- 管理员入口 -->
             <div class="admin-entry">
                  <a href="admin-login.html" class="admin-link">
                     <i class="fas fa-shield-alt"></i>
-                     <span>管理员入口</span>
+                    <span>管理员入口</span>
                  </a>
             </div>
         </div>
@@ -94,7 +96,6 @@
     <!-- 先引入GitHub数据管理器 -->
     <script src="js/github-data-manager.js"></script>
     <!-- 后引入主脚本 -->
-    <script src="js/script.js"></script>  <!-- 修复这行！ -->
+    <script src="js/script.js"></script>
 </body>
-
 </html>
