--- a/chat.html
+++ b/chat.html
@@ -81,6 +81,8 @@
                 </div>
             </div>
 
+            <div class="room-banner" id="roomBanner" style="display:none;"></div>
+
             <!-- 消息区域 -->
             <div class="messages-container" id="messagesContainer">
                 <div class="welcome-message">
