--- a/home.html
+++ b/home.html
@@ -13,11 +13,11 @@
 
     <!-- 音乐播放控件 -->
     <div class="music-player" id="musicPlayer">
-        <button class="music-toggle" id="musicToggle">
-            <i class="fas fa-music"></i>
+        <button class="music-toggle" id="musicToggle" title="点击播放/暂停">
+            <i class="fas fa-play"></i>
         </button>
         <div class="music-controls">
-            <span>背景音乐</span>
+            <span>点击播放背景音乐</span>
             <input type="range" min="0" max="100" value="50" class="volume-slider" id="volumeSlider">
         </div>
     </div>
