--- a/publish.html
+++ b/publish.html
@@ -142,6 +142,7 @@
                         <textarea id="productDescription" required maxlength="1000"
                                   placeholder="请详细描述商品的状况、使用情况、包含的配件等信息..."></textarea>
                         <div class="char-count"><span id="descCount">0</span>/1000</div>
+                        <div class="char-count" id="descHint">描述至少 10 字</div>
                     </div>
                 </div>
 
