--- a/publish.html
+++ b/publish.html
@@ -83,7 +83,7 @@
                             <p>点击或拖拽图片到这里</p>
                             <span>支持 JPG, PNG 格式，最多 5 张</span>
                         </div>
-                        <input type="file" id="imageInput" multiple accept="image/*" style="display: none;">
+                        <input type="file" id="imageInput" multiple accept="image/*" capture="environment" class="file-input-overlay">
                     </div>
                     <div class="image-preview" id="imagePreview"></div>
                 </div>
